Update 104.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.1 Create partitions and filesystems/104.1 Lesson 1.md
@@ -868,7 +868,7 @@ Device     Boot   Start     End Sectors  Size Id Type
 # Ответы на упражнения для размышления
 
 
-**1. Рассмотрим диск объемом 2 ГБ с таблицей разделов MBR и следующей компоновкой:
+**1. Рассмотрим диск объемом 2 ГБ с таблицей разделов MBR и следующей компоновкой:**
 ```
 Disk /dev/sdb: 1.9 GiB, 1998631936 bytes, 3903578 sectors
 Disk model: DataTraveler 2.0
@@ -885,24 +885,22 @@ Device     Boot   Start     End Sectors  Size Id Type
 Можете ли вы создать на нем раздел размером 600 Мбайт? Почему?
 
 >Вы не можете, потому что не хватает непрерывного пространства. Первый признак того, что что-то «выключено» - это список устройств: у вас есть `/dev/sdb1` и `/dev/sdb3`, но нет `/dev/sdb2`. Итак, чего-то не хватает. Это «разрыв» в 1048577 секторов. 
-
->Затем вам нужно посмотреть, где заканчивается раздел и начинается другой. Первый раздел заканчивается в секторе `1050623`, а раздел 2 начинается в `2099200`. При 512 байтах на сектор это 536.871.424 байта. Если разделить его на 1024, получится 524,288 килобайт. Делим еще раз на 1024 и получаем… 512 МБ. Это размер «gap».
-
+>Затем вам нужно посмотреть, где заканчивается раздел и начинается другой. Первый раздел заканчивается в секторе `1050623`, а раздел 2 начинается в `2099200`. При 512 байтах на сектор это 536.871.424 байта. Если разделить его на 1024, получится 524,288 килобайт. Делим еще раз на 1024 и получаем… 512 МБ. Это размер «gap».\
 >Если на диске 2 ГБ, то мы располагаем максимум еще 512 МБ после раздела 3. Даже если у нас всего около 1 ГБ нераспределенного, самый большой непрерывный блок составляет 512 МБ. Значит, для раздела 600 МБ нет места.
 
-**2. На диске в `/dev/sdc` у нас есть первый раздел размером 1 ГБ, содержащий около 256 МБ файлов. Используя `parted`, как вы можете уменьшить его, чтобы в нем было достаточно места для файлов?
+**2. На диске в `/dev/sdc` у нас есть первый раздел размером 1 ГБ, содержащий около 256 МБ файлов. Используя `parted`, как вы можете уменьшить его, чтобы в нем было достаточно места для файлов?**
 
 >Это операция, состоящая из нескольких частей. Сначала вам нужно сжать файловую систему с помощью `resize2fs`. Вместо того, чтобы указывать новый размер напрямую, вы можете использовать параметр `-M`, чтобы он был просто «достаточно большим». Итак: `resize2fs -M /dev/sdc1`.
 >Затем вы изменяете размер самого раздела с помощью `parted`, используя `resizepart`. Поскольку это первый раздел, можно предположить, что он начинается с нуля и заканчивается на 241 МБ. Итак, команда `resizepart 1 241M`.
 
-**3. Представьте, что у вас есть диск в `/dev/sdb`, и вы хотите создать раздел подкачки размером 1 ГБ в его начале. Итак, используя parted, вы создаете раздел с `mkpart primary linux-swap 0 1024M`. Затем вы включаете свопинг на этом разделе с помощью `swapon /dev/sdb1`, но получаете следующее сообщение об ошибке: `swapon: /dev/sdb1: read swap header failed`. Что пошло не так?
+**3. Представьте, что у вас есть диск в `/dev/sdb`, и вы хотите создать раздел подкачки размером 1 ГБ в его начале. Итак, используя parted, вы создаете раздел с `mkpart primary linux-swap 0 1024M`. Затем вы включаете свопинг на этом разделе с помощью `swapon /dev/sdb1`, но получаете следующее сообщение об ошибке: `swapon: /dev/sdb1: read swap header failed`. Что пошло не так?**
 
 >Вы создали раздел правильного типа (`linux-swap`), но помните, что `mkpart` не создает файловую систему. Вы забыли настроить раздел как пространство подкачки сначала с помощью `mkswap`, прежде чем использовать его.
 
-**4. В ходе этого урока вы пробовали использовать некоторые команды в `parted`, но по ошибке удалили третий раздел на жестком диске. Вы знаете, что он появился после раздела UEFI 250 МБ и раздела подкачки 4 ГБ и имел размер 10 ГБ. Какую команду можно использовать для его восстановления?
+**4. В ходе этого урока вы пробовали использовать некоторые команды в `parted`, но по ошибке удалили третий раздел на жестком диске. Вы знаете, что он появился после раздела UEFI 250 МБ и раздела подкачки 4 ГБ и имел размер 10 ГБ. Какую команду можно использовать для его восстановления?**
 
 >Не паникуйте, у вас есть вся информация, необходимая для восстановления раздела, просто воспользуйтесь `rescue` и произведите вычисления. До этого у вас было 250 МБ + 4,096 МБ (4 * 1024), поэтому начальная точка должна быть около 4346 МБ. Плюс размер 10,240 МБ (10 * 1024), он должен заканчиваться 14,586 МБ. Итак, `rescue 4346m 14586m` должна дать положительный результат. Возможно, вам придется немного подожать во время восстановления, т. к. это может занять некоторое время, в зависимости от размера вашего диска.
 
-**5. Представьте, что у вас есть неиспользуемый раздел размером 4 ГБ на `/dev/sda3`. При использовании `fdisk`, какой будет последовательность операций, чтобы превратить его в активный раздел подкачки?
+**5. Представьте, что у вас есть неиспользуемый раздел размером 4 ГБ на `/dev/sda3`. При использовании `fdisk`, какой будет последовательность операций, чтобы превратить его в активный раздел подкачки?**
 
 >Сначала измените тип раздела на «Linux Swap» (82), запишите изменения на диск и выйдите. Затем используйте `mkswap`, чтобы настроить раздел как область подкачки. Затем используйте `swapon`, чтобы включить его.
