Update 104.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
@@ -9,3 +9,58 @@
 
 
 # Введение
+
+Cовременные файловые системы Linux журналируемые. Это означает, что каждая операция перед выполнением регистрируется во внутреннем логе (the *journal*). Если операция прервана из-за системной ошибки (например, kernel panic, сбоя питания и т. д.), Ее можно восстановить, проверив журнал, чтобы избежать повреждения файловой системы и потери данных.
+
+Это значительно снижает потребность в ручных проверках файловой системы, но они все равно могут понадобиться. Знание используемых для этого инструментов (и соответствующих параметров) может показать разницу между ужином дома с семьей или ночевкой в серверной на работе.
+
+В этом уроке мы обсудим инструменты, доступные для мониторинга использования файловой системы, оптимизации ее работы, а также способы проверки и устранения повреждений.
+
+
+# Проверка использования диска
+
+Есть две команды, которые можно использовать для проверки того, сколько места используется и сколько осталось в файловой системе. Первый - `du`, что означает «disk usage»(использоваие диска).
+
+`du` рекурсивен по своей природе. В своей самой простой форме команда просто покажет, сколько блоков размером 1 килобайт используется текущим каталогом и всеми его подкаталогами:
+```
+$ du
+4816	.
+```
+Это не очень полезно, поэтому мы можем запросить более «удобочитаемый» вывод, добавив параметр `-h`:
+```
+$ du -h
+4.8M	.
+```
+По умолчанию du показывает только счетчик использования каталогов (учитывая все файлы и подкаталоги внутри него). Чтобы показать индивидуальный счетчик для всех файлов в каталоге, используйте параметр `-a`:
+```
+$ du -ah
+432K	./geminoid.jpg
+508K	./Linear_B_Hero.jpg
+468K	./LG-G8S-ThinQ-Mirror-White.jpg
+656K	./LG-G8S-ThinQ-Range.jpg
+60K	./Stranger3_Titulo.png
+108K	./Baidu_Banho.jpg
+324K	./Xiaomi_Mimoji.png
+284K	./Mi_CC_9e.jpg
+96K	./Mimoji_Comparativo.jpg
+32K	./Xiaomi FCC.jpg
+484K	./geminoid2.jpg
+108K	./Mimoji_Abre.jpg
+88K	./Mi8_Hero.jpg
+832K	./Tablet_Linear_B.jpg
+332K	./Mimoji_Comparativo.png
+4.8M	.
+```
+Поведение по умолчанию - показать использование каждого подкаталога, а затем общее использование текущего каталога, включая подкаталоги:
+```
+$ du -h
+4.8M	./Temp
+6.0M	.
+```
+В приведенном выше примере мы видим, что подкаталог `Temp` занимает 4,8 МБ, а текущий каталог, *включая* `Temp`, занимает 6,0 МБ. Но сколько места занимают *файлы* в текущем каталоге, исключая подкаталоги? Для этого у нас есть параметр `-S`:
+```
+$ du -Sh
+4.8M	./Temp
+1.3M	.
+```
+>Помните, что параметры командной строки чувствительны к регистру: `-s` отличается от `-S`.
