Update 104.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
@@ -64,3 +64,43 @@ $ du -Sh
 1.3M	.
 ```
 >Помните, что параметры командной строки чувствительны к регистру: `-s` отличается от `-S`.
+
+Если вы хотите сохранить это различие между пространством, используемым файлами в текущем каталоге, и пространством, используемым подкаталогами, но `также` хотите получить общий итог в конце, вы можете добавить параметр `-c`:
+```
+$ du -Shc
+4.8M	./Temp
+1.3M	.
+6.0M	total
+```
+Вы можете контролировать, насколько «глубоким» должен быть вывод du с помощью параметра `-d N`, где `N` описывает уровни. Например, если вы используете параметр `-d 1`, он покажет текущий каталог и его подкаталоги, но не их подкаталоги.
+
+Смотрите разницу ниже. Без `-d`:
+```
+$ du -h
+216K	./somedir/anotherdir
+224K	./somedir
+232K	.
+```
+И ограничиваем глубину одним уровнем с помощью `-d 1`:
+```
+$ du -h -d1
+224K	./somedir
+232K	.
+```
+Обратите внимание, что даже если другой каталог не отображается, его размер все равно учитывается.
+
+Вы можете исключить некоторые типы файлов из подсчета, что вы можете сделать с помощью `--exclude = "PATTERN"`, где `PATTERN` - это шаблон, с которым вы хотите сопоставить. Рассмотрим этот каталог:
+```
+$ du -ah
+124K	./ASM68K.EXE
+2.0M	./Contra.bin
+36K	./fixheadr.exe
+4.0K	./README.txt
+2.1M	./Contra_NEW.bin
+4.0K	./Built.bat
+8.0K	./Contra_Main.asm
+4.2M	.
+```
+Теперь мы будем использовать `--exclude`, чтобы отфильтровать каждый файл с расширением `.bin`:
+
+Обратите внимание, что общая сумма больше не отражает размер исключенных файлов.
