Update 104.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
@@ -102,5 +102,107 @@ $ du -ah
 4.2M	.
 ```
 Теперь мы будем использовать `--exclude`, чтобы отфильтровать каждый файл с расширением `.bin`:
+```
+$ du -ah --exclude="*.bin"
+124K	./ASM68K.EXE
+36K	./fixheadr.exe
+4.0K	./README.txt
+4.0K	./Built.bat
+8.0K	./Contra_Main.asm
+180K	.
+```
 
 Обратите внимание, что общая сумма больше не отражает размер исключенных файлов.
+
+
+# Проверка свободного места
+
+`du` работает на уровне файлов. Есть еще одна команда, которая может показать вам использование диска и сколько места доступно на уровне файловой системы. Это команда `df`.
+
+Команда `df` предоставит список всех доступных (уже смонтированных) файловых систем в вашей системе, включая их общий размер, сколько места было использовано, сколько места доступно, процент использования и место монтирования:
+```
+$ df
+Filesystem     1K-blocks      Used Available Use% Mounted on
+udev             2943068         0   2943068   0% /dev
+tmpfs             595892      2496    593396   1% /run
+/dev/sda1      110722904  25600600  79454800  25% /
+tmpfs            2979440    951208   2028232  32% /dev/shm
+tmpfs               5120         0      5120   0% /run/lock
+tmpfs            2979440         0   2979440   0% /sys/fs/cgroup
+tmpfs             595888        24    595864   1% /run/user/119
+tmpfs             595888       116    595772   1% /run/user/1000
+/dev/sdb1          89111      1550     80824   2% /media/carol/part1
+/dev/sdb3          83187      1550     75330   3% /media/carol/part3
+/dev/sdb2          90827      1921     82045   3% /media/carol/part2
+/dev/sdc1      312570036 233740356  78829680  75% /media/carol/Samsung Externo
+```
+Однако показывать размер блоками по 1 КБ не очень удобно. Как и в случае с `du`, вы можете добавить параметры `-h`, чтобы получить более «удобочитаемый» вывод:
+```
+$ df -h
+Filesystem      Size  Used Avail Use% Mounted on
+udev            2.9G     0  2.9G   0% /dev
+tmpfs           582M  2.5M  580M   1% /run
+/dev/sda1       106G   25G   76G  25% /
+tmpfs           2.9G  930M  2.0G  32% /dev/shm
+tmpfs           5.0M     0  5.0M   0% /run/lock
+tmpfs           2.9G     0  2.9G   0% /sys/fs/cgroup
+tmpfs           582M   24K  582M   1% /run/user/119
+tmpfs           582M  116K  582M   1% /run/user/1000
+/dev/sdb1        88M  1.6M   79M   2% /media/carol/part1
+/dev/sdb3        82M  1.6M   74M   3% /media/carol/part3
+/dev/sdb2        89M  1.9M   81M   3% /media/carol/part2
+/dev/sdc1       299G  223G   76G  75% /media/carol/Samsung Externo
+```
+Вы также можете использовать параметр `-i` для отображения используемых / доступных inode вместо блоков:
+```
+$ df -i
+Filesystem      Inodes  IUsed   IFree IUse% Mounted on
+udev            737142    547  736595    1% /dev
+tmpfs           745218    908  744310    1% /run
+/dev/sda6      6766592 307153 6459439    5% /
+tmpfs           745218    215  745003    1% /dev/shm
+tmpfs           745218      4  745214    1% /run/lock
+tmpfs           745218     18  745200    1% /sys/fs/cgroup
+/dev/sda1        62464    355   62109    1% /boot
+tmpfs           745218     43  745175    1% /run/user/1000
+```
+Одним из полезных параметров является `-T`, который также выводит тип каждой файловой системы:
+```
+$ df -hT
+Filesystem     Type      Size  Used Avail Use% Mounted on
+udev           devtmpfs  2.9G     0  2.9G   0% /dev
+tmpfs          tmpfs     582M  2.5M  580M   1% /run
+/dev/sda1      ext4      106G   25G   76G  25% /
+tmpfs          tmpfs     2.9G  930M  2.0G  32% /dev/shm
+tmpfs          tmpfs     5.0M     0  5.0M   0% /run/lock
+tmpfs          tmpfs     2.9G     0  2.9G   0% /sys/fs/cgroup
+tmpfs          tmpfs     582M   24K  582M   1% /run/user/119
+tmpfs          tmpfs     582M  116K  582M   1% /run/user/1000
+/dev/sdb1      ext4       88M  1.6M   79M   2% /media/carol/part1
+/dev/sdb3      ext4       82M  1.6M   74M   3% /media/carol/part3
+/dev/sdb2      ext4       89M  1.9M   81M   3% /media/carol/part2
+/dev/sdc1      fuseblk   299G  223G   76G  75% /media/carol/Samsung Externo
+```
+Зная тип файловой системы, вы можете фильтровать вывод. Вы можете показать только файловые системы заданного типа с помощью -`t TYPE` или исключить файловые системы заданного типа с помощью `-x TYPE`, как в примерах ниже. 
+
+Исключая файловые системы `tmpfs`:
+```
+$ df -hx tmpfs
+Filesystem      Size  Used Avail Use% Mounted on
+udev            2.9G     0  2.9G   0% /dev
+/dev/sda1       106G   25G   76G  25% /
+/dev/sdb1        88M  1.6M   79M   2% /media/carol/part1
+/dev/sdb3        82M  1.6M   74M   3% /media/carol/part3
+/dev/sdb2        89M  1.9M   81M   3% /media/carol/part2
+/dev/sdc1       299G  223G   76G  75% /media/carol/Samsung Externo
+```
+Показаны только файловые системы `ext4`:
+```
+$ df -ht ext4
+Filesystem      Size  Used Avail Use% Mounted on
+/dev/sda1       106G   25G   76G  25% /
+/dev/sdb1        88M  1.6M   79M   2% /media/carol/part1
+/dev/sdb3        82M  1.6M   74M   3% /media/carol/part3
+/dev/sdb2        89M  1.9M   81M   3% /media/carol/part2
+```
+Вы также можете настроить вывод `df`, выбрав, что должно отображаться и в каком порядке, используя параметр `--output =`, за которым следует список полей, которые вы хотите отображать, через запятую. Некоторые из доступных полей:
