Update 104.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
@@ -206,3 +206,62 @@ Filesystem      Size  Used Avail Use% Mounted on
 /dev/sdb2        89M  1.9M   81M   3% /media/carol/part2
 ```
 Вы также можете настроить вывод `df`, выбрав, что должно отображаться и в каком порядке, используя параметр `--output =`, за которым следует список полей, которые вы хотите отображать, через запятую. Некоторые из доступных полей:
+
+`source` - Устройство, соответствующее файловой системе.
+
+`fstype` - Тип файловой системы.
+
+`size` - Общий размер файловой системы.
+
+`used` - Сколько места используется.
+
+`avail` - Сколько места доступно.
+
+`pcent` - Процент использования.
+
+`target` - Где смонтирована файловая система (точка монтирования).
+
+Если вам нужен вывод, показывающий цель, источник, тип и использование, вы можете использовать:
+```
+$ df -h --output=target,source,fstype,pcent
+Mounted on                    Filesystem     Type     Use%
+/dev                          udev           devtmpfs   0%
+/run                          tmpfs          tmpfs      1%
+/                             /dev/sda1      ext4      25%
+/dev/shm                      tmpfs          tmpfs     32%
+/run/lock                     tmpfs          tmpfs      0%
+/sys/fs/cgroup                tmpfs          tmpfs      0%
+/run/user/119                 tmpfs          tmpfs      1%
+/run/user/1000                tmpfs          tmpfs      1%
+/media/carol/part1            /dev/sdb1      ext4       2%
+/media/carol/part3            /dev/sdb3      ext4       3%
+/media/carol/part2            /dev/sdb2      ext4       3%
+/media/carol/Samsung Externo  /dev/sdc1      fuseblk   75%
+```
+`df` также можно использовать для проверки информации inode, передав следующие поля в `--output =`:
+
+`itotal` - Общее количество индексных дескрипторов в файловой системе.
+
+`iused` - Количество используемых inodes в файловой системе.
+
+`iavail` - Количество доступных inodes в файловой системе.
+
+`ipcent` - Процент используемых индексных дескрипторов в файловой системе.
+
+Например:
+```
+$ df --output=source,fstype,itotal,iused,ipcent
+Filesystem     Type      Inodes  IUsed IUse%
+udev           devtmpfs  735764    593    1%
+tmpfs          tmpfs     744858   1048    1%
+/dev/sda1      ext4     7069696 318651    5%
+tmpfs          tmpfs     744858    222    1%
+tmpfs          tmpfs     744858      3    1%
+tmpfs          tmpfs     744858     18    1%
+tmpfs          tmpfs     744858     22    1%
+tmpfs          tmpfs     744858     40    1%
+```
+
+# Поддержка файловых систем ext2, ext3 и ext4
+
+
