Update 104.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
@@ -264,4 +264,29 @@ tmpfs          tmpfs     744858     40    1%
 
 # Поддержка файловых систем ext2, ext3 и ext4
 
+Чтобы проверить файловую систему на наличие ошибок (и, надеюсь, исправить их), Linux предоставляет утилиту `fsck` (подумайте о «проверке файловой системы», и вы никогда не забудете ее название). В самой простой форме вы можете вызвать его с помощью `fsck`, за которым следует расположение файловой системы, которое вы хотите проверить:
+```
+# fsck /dev/sdb1
+fsck from util-linux 2.33.1
+e2fsck 1.44.6 (5-Mar-2019)
+DT_2GB: clean, 20/121920 files, 369880/487680 blocks
+```
+>НИКОГДА не запускайте `fsck` (или связанные с ним утилиты) на смонтированной файловой системе. Если это все равно будет сделано, данные могут быть потеряны.
 
+Сам `fsck` не будет проверять файловую систему, он просто вызовет соответствующую утилиту для этого типа файловой системы. В приведенном выше примере, поскольку тип файловой системы не был указан, `fsck` по умолчанию принял файловую систему ext2/3/4 и вызвал `e2fsck`.
+
+Чтобы указать файловую систему, используйте параметр `-t`, за которым следует имя файловой системы, как в `fsck -t vfat /dev/sdc`. В качестве альтернативы вы можете напрямую вызвать утилиту, специфичную для файловой системы, например `fsck.msdos` для файловых систем FAT.
+
+>Введите `fsck`, а затем дважды нажмите `Tab`, чтобы увидеть список всех связанных команд в вашей системе.
+
+`fsck` может принимать некоторые аргументы командной строки. Вот некоторые из наиболее распространенных:
+
+`-A` - Это проверит все файловые системы, перечисленные в /etc/fstab.
+
+`-C` - Отображает индикатор выполнения при проверке файловой системы. В настоящее время работает только с файловыми системами ext2/3/4.
+
+`-N` - Этот выведет, что сделано, и выйдет, фактически не проверяя файловую систему.
+
+`-R` - При использовании вместе с `-A` это пропускает проверку корневой файловой системы.
+
+`-V` - Подробный режим, во время работы печатается больше информации, чем обычно. Это полезно для отладки.
