Update 104.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
@@ -285,8 +285,23 @@ DT_2GB: clean, 20/121920 files, 369880/487680 blocks
 
 `-C` - Отображает индикатор выполнения при проверке файловой системы. В настоящее время работает только с файловыми системами ext2/3/4.
 
-`-N` - Этот выведет, что сделано, и выйдет, фактически не проверяя файловую систему.
+`-N` - Выведет, что сделано, и выйдет, фактически не проверяя файловую систему.
 
 `-R` - При использовании вместе с `-A` это пропускает проверку корневой файловой системы.
 
 `-V` - Подробный режим, во время работы печатается больше информации, чем обычно. Это полезно для отладки.
+
+Специальная утилита для файловых систем ext2, ext3 и ext4 - это `e2fsck`, также называемая `fsck.ext2`, `fsck.ext3` и `fsck.ext4` (эти три являются просто ссылками на `e2fsck`). По умолчанию он работает в интерактивном режиме: при обнаружении ошибки файловой системы он останавливается и спрашивает пользователя, что делать. Пользователь должен ввести `y`, чтобы исправить проблему, `n`, чтобы оставить ее нерешенной, или `a`, чтобы исправить текущую проблему и все последующие.
+
+Конечно, сидеть перед терминалом и ждать, пока e2fsck спросит, что делать, - непродуктивное использование вашего времени, особенно если вы имеете дело с большой файловой системой. Итак, есть параметры, которые заставляют `e2fsck` работать в неинтерактивном режиме:
+
+`-p` - Это попытается автоматически исправить все обнаруженные ошибки. Если обнаружена ошибка, требующая вмешательства системного администратора, `e2fsck` предоставит описание проблемы и завершит работу.
+
+`-y` - Это ответит `y` (да) на все вопросы.
+
+`-n` - Противоположность `-y`. Помимо ответа `n` (нет) на все вопросы, это приведет к монтированию файловой системы только для чтения, поэтому ее нельзя будет изменить.
+
+`-f` - Заставляет `e2fsck` проверять файловую систему, даже если она помечена как «чистая», т.е. была правильно размонтирована.
+
+
+# Тонкая настройка файловой системы ext
