Update 104.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
@@ -305,3 +305,90 @@ DT_2GB: clean, 20/121920 files, 369880/487680 blocks
 
 
 # Тонкая настройка файловой системы ext
+
+Файловые системы ext2, ext3 и ext4 имеют ряд параметров, которые могут быть отрегулированы или «настроены» системным администратором в соответствии с потребностями системы. Утилита, используемая для отображения или изменения этих параметров, называется `tune2fs`.
+
+Чтобы увидеть текущие параметры для любой данной файловой системы, используйте параметр `-l`, за которым следует устройство, представляющее раздел. В приведенном ниже примере показан вывод этой команды на первом разделе первого диска (`/dev/sda1`) машины:
+```
+# tune2fs -l /dev/sda1
+tune2fs 1.44.6 (5-Mar-2019)
+Filesystem volume name:   <none>
+Last mounted on:          /
+Filesystem UUID:          6e2c12e3-472d-4bac-a257-c49ac07f3761
+Filesystem magic number:  0xEF53
+Filesystem revision #:    1 (dynamic)
+Filesystem features:      has_journal ext_attr resize_inode dir_index filetype needs_recovery extent 64bit flex_bg sparse_super large_file huge_file dir_nlink extra_isize metadata_csum
+Filesystem flags:         signed_directory_hash
+Default mount options:    user_xattr acl
+Filesystem state:         clean
+Errors behavior:          Continue
+Filesystem OS type:       Linux
+Inode count:              7069696
+Block count:              28255605
+Reserved block count:     1412780
+Free blocks:              23007462
+Free inodes:              6801648
+First block:              0
+Block size:               4096
+Fragment size:            4096
+Group descriptor size:    64
+Reserved GDT blocks:      1024
+Blocks per group:         32768
+Fragments per group:      32768
+Inodes per group:         8192
+Inode blocks per group:   512
+Flex block group size:    16
+Filesystem created:       Mon Jun 17 13:49:59 2019
+Last mount time:          Fri Jun 28 21:14:38 2019
+Last write time:          Mon Jun 17 13:53:39 2019
+Mount count:              8
+Maximum mount count:      -1
+Last checked:             Mon Jun 17 13:49:59 2019
+Check interval:           0 (<none>)
+Lifetime writes:          20 GB
+Reserved blocks uid:      0 (user root)
+Reserved blocks gid:      0 (group root)
+First inode:              11
+Inode size:	          256
+Required extra isize:     32
+Desired extra isize:      32
+Journal inode:            8
+First orphan inode:       5117383
+Default directory hash:   half_md4
+Directory Hash Seed:      fa95a22a-a119-4667-a73e-78f77af6172f
+Journal backup:           inode blocks
+Checksum type:            crc32c
+Checksum:                 0xe084fe23
+```
+В файловых системах ext есть *mount counts*(счетчики монтирования). Счетчик увеличивается на 1 каждый раз при монтировании файловой системы, и когда достигается пороговое значение (максимальное количество монтируемых файлов), система будет автоматически проверяться с помощью `e2fsck` при следующей загрузке.
+
+Максимальное количество монтируемых файлов можно установить с помощью параметра `-c N`, где `N` - это количество раз, когда файловая система может быть смонтирована без проверки. Параметр `-C N` устанавливает, сколько раз система монтировалась на значение `N`. Обратите внимание, что параметры командной строки чувствительны к регистру, поэтому `-c` отличается от `-C`.
+
+Также можно определить временной интервал между проверками с помощью параметра `-i`, за которым следует число и буквы `d` для дней, `m` для месяцев и `y` для лет. Например, `-i 10d` будет проверять файловую систему при следующей перезагрузке каждые 10 дней. Используйте ноль в качестве значения, чтобы отключить эту функцию.
+
+`-L` можно использовать для установки метки для файловой системы. Эта метка может содержать до 16 символов. Параметр `-U` устанавливает UUID для файловой системы, который представляет собой 128-битное шестнадцатеричное число.  приведенном выше примере UUID - `6e2c12e3-472d-4bac-a257-c49ac07f3761`. И метку, и UUID можно использовать вместо имени устройства (например, `/dev/sda1`) для монтирования файловой системы.
+
+Параметр `-e BEHAVIOR` определяет поведение ядра при обнаружении ошибки файловой системы. Возможны три варианта поведения:
+
+`continue` - Продолжит выполнение в обычном режиме.
+`remount-ro` - Перемонтирует файловую систему как доступную только для чтения.
+`panic` - Вызовет a kernel panic.
+
+Поведение по умолчанию - продолжить. `remount-ro` может быть полезен в приложениях, чувствительных к данным, поскольку он немедленно останавливает запись на диск, избегая большего количества потенциальных ошибок.
+
+Файловые системы ext3 - это в основном файловые системы ext2 с журналом. Используя `tune2fs`, вы можете добавить журнал в файловую систему ext2, таким образом преобразовав его в ext3. Процедура проста, просто передайте параметр `-j` в `tune2fs`, а затем укажите устройство, содержащее файловую систему:
+```
+# tune2fs -j /dev/sda1
+```
+После этого при монтировании преобразованной файловой системы не забудьте установить тип `ext3`, чтобы можно было использовать журнал. 
+
+При работе с журналируемыми файловыми системами параметр `-J` позволяет вам использовать дополнительные параметры для установки некоторых параметров журнала, например `-J size =` для установки размера журнала (в мегабайтах), `-J location =` указать, где должен храниться журнал (либо конкретный блок, либо определенная позиция на диске с суффиксами, такими как `M` или `G`), и даже поместить журнал на внешнее устройство с помощью `-J device =`.
+
+Вы можете указать сразу несколько параметров, разделив их запятыми. Например: `-J size=10,location=100M,device=/dev/sdb1` создаст журнал размером 10 МБ в позиции 100 МБ на устройстве `/dev/sdb1`.
+
+>`tune2fs` имеет параметр «brute force» `-f`, который заставит его завершить операцию, даже если будут обнаружены ошибки. Излишне говорить, что это следует использовать с особой осторожностью.
+
+
+# Поддержка файловых систем XFS
+
+
