Update 104.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
@@ -391,4 +391,60 @@ Checksum:                 0xe084fe23
 
 # Поддержка файловых систем XFS
 
+Для файловых систем XFS эквивалентом `fsck` является `xfs_repair`. Если вы подозреваете, что с файловой системой что-то не так, первое, что нужно сделать, - это просканировать ее на предмет повреждений.
 
+Это можно сделать, передав параметр `-n` в `xfs_repair`, а затем - устройство, содержащее файловую систему. Параметр `-n` означает «без изменений»: файловая система будет проверена, будут сообщаться об ошибках, но исправления производиться не будут:
+```
+# xfs_repair -n /dev/sdb1
+Phase 1 - find and verify superblock...
+Phase 2 - using internal log
+        - zero log...
+        - scan filesystem freespace and inode maps...
+        - found root inode chunk
+Phase 3 - for each AG...
+        - scan (but do not clear) agi unlinked lists...
+        - process known inodes and perform inode discovery...
+        - agno = 0
+        - agno = 1
+        - agno = 2
+        - agno = 3
+        - process newly discovered inodes...
+Phase 4 - check for duplicate blocks...
+        - setting up duplicate extent list...
+        - check for inodes claiming duplicate blocks...
+        - agno = 1
+        - agno = 3
+        - agno = 0
+        - agno = 2
+No modify flag set, skipping phase 5
+Phase 6 - check inode connectivity...
+        - traversing filesystem ...
+        - traversal finished ...
+        - moving disconnected inodes to lost+found ...
+Phase 7 - verify link counts...
+No modify flag set, skipping filesystem flush and exiting.
+```
+Если обнаружены ошибки, вы можете приступить к ремонту без параметра `-n`, например: `xfs_repair /dev/sdb1`. 
+
+`xfs_repair` принимает ряд параметров командной строки. Среди них:
+
+`-l LOGDEV` и `-r RTDEV`
+>Они необходимы, если файловая система имеет разделы внешнего журнала и реального времени. В этом случае замените LOGDEV и RTDEV соответствующими устройствами.
+
+`-m N`
+>Используется для ограничения использования памяти `xfs_repair` до `N` мегабайт, что может быть полезно в настройках сервера. Согласно странице руководства, по умолчанию `xfs_repair` масштабирует использование памяти по мере необходимости до 75% физической памяти системы.
+
+`-d`
+>«Опасный» режим позволит восстановить файловые системы, смонтированные только для чтения.
+
+`-v`
+>Вы, наверное, догадались: подробный режим. Каждый раз, когда используется этот параметр, «подробность» увеличивается (например, `-v -v` выведет больше информации, чем просто `-v`).
+
+
+Обратите внимание, что `xfs_repair` не может восстанавливать файловые системы с «грязным» журналом. Вы можете «обнулить» поврежденный журнал с помощью параметра `-L`, но имейте в виду, что это крайний метод, поскольку он может привести к повреждению файловой системы и потере данных.
+
+Для отладки файловой системы XFS можно использовать утилиту `fs_db`, как в `xfs_db /dev/sdb1`. В основном это используется для проверки различных элементов и параметров файловой системы.
+
+Эта утилита имеет интерактивную подсказку, как и `parted`, со многими внутренними командами. Также доступна справочная система: введите `help`, чтобы увидеть список всех команд, и `help`, за которым следует имя команды, чтобы увидеть дополнительную информацию о команде.
+
+Еще одна полезная утилита - `xfs_fsr`, которую можно использовать для реорганизации («дефрагментации») файловой системы XFS. При выполнении без каких-либо дополнительных аргументов он будет работать в течение двух часов и попытается дефрагментировать все смонтированные файловые системы XFS с возможностью записи, перечисленные в файле `/etc/mtab/`. Вам может потребоваться установить эту утилиту с помощью диспетчера пакетов для вашего дистрибутива Linux, поскольку он может не входить в стандартную установку. Для получения дополнительной информации обратитесь к соответствующей странице руководства.
