Update 104.2 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 104: Devices, Linux Filesystems, Filesystem Hierarchy Standard/104.2 Maintain the integritu of filesystems/104.2 Lesson 1.md
@@ -448,3 +448,65 @@ No modify flag set, skipping filesystem flush and exiting.
 Эта утилита имеет интерактивную подсказку, как и `parted`, со многими внутренними командами. Также доступна справочная система: введите `help`, чтобы увидеть список всех команд, и `help`, за которым следует имя команды, чтобы увидеть дополнительную информацию о команде.
 
 Еще одна полезная утилита - `xfs_fsr`, которую можно использовать для реорганизации («дефрагментации») файловой системы XFS. При выполнении без каких-либо дополнительных аргументов он будет работать в течение двух часов и попытается дефрагментировать все смонтированные файловые системы XFS с возможностью записи, перечисленные в файле `/etc/mtab/`. Вам может потребоваться установить эту утилиту с помощью диспетчера пакетов для вашего дистрибутива Linux, поскольку он может не входить в стандартную установку. Для получения дополнительной информации обратитесь к соответствующей странице руководства.
+
+
+# Упражнения для закрепления
+
+1. Используя `du`, как мы можем проверить, сколько места используется только файлами в текущем каталоге?
+2. Используя `df`, перечислите информацию для каждой файловой системы ext4 с выходными данными, включая следующие поля, по порядку: устройство, точка монтирования, общее количество inodes, количество доступных inodes, процент свободного места.
+3. Какая команда запускает `e2fsck` на `/dev/sdc1` в неинтерактивном режиме, пытаясь автоматически исправить большинство ошибок?
+4. Предположим, `/dev/sdb1` - файловая система ext2. Как вы можете преобразовать его в ext3, и в то же время сбросить его счетчик монтирования и изменить его метку на `UserData`?
+5. Как вы можете проверить наличие ошибок в файловой системе XFS, не исправляя обнаруженные повреждения?
+
+
+# Упражнения на размышления
+
+1. Предположим, у вас есть файловая система ext4 на `/dev/sda1` со следующими параметрами, полученными с помощью `tune2fs`:
+```
+Mount count:              8
+Maximum mount count:      -1
+```
+Что будет при следующей загрузке, если будет введена команда `tune2fs -c 9 /dev/sda1`?
+
+2. Рассмотрим следующий вывод `du -h`:
+```
+$ du -h
+216K	./somedir/anotherdir
+224K	./somedir
+232K	.
+```
+Сколько места занимают только файлы в текущем каталоге? Как мы могли бы переписать команду, чтобы эта информация отображалась более четко?
+
+3. Что произойдет с файловой системой ext2 `/dev/sdb1`, если будет введена указанная ниже команда?
+```
+# tune2fs -j /dev/sdb1 -J device=/dev/sdc1 -i 30d
+```
+4. Как мы можем проверить наличие ошибок в файловой системе XFS на `/dev/sda1`, которая имеет раздел журнала на `/dev/sdc1`, без фактического ремонта?
+5. В чем разница между параметрами `-T` и `-t` для `df`?
+
+
+# Резюме
+
+На этом уроке вы узнали:
+
+* Как проверить используемое и свободное место в файловой системе. 
+* Как настроить вывод `df` под свои нужды. 
+* Как проверить целостность и восстановить файловую систему с помощью `fsck` и `e2fsck`.
+* Как настроить файловую систему ext с помощью `tune2fs`. 
+* Как проверить и восстановить файловые системы XFS с помощью `xfs_repair`.
+
+В этом уроке обсуждались следующие команды:
+
+`du` - Просмотр количества используемого дискового пространства в файловой системе.
+`df` - Просмотр объема доступного (свободного) дискового пространства в файловой системе.
+`fsck` - Утилита восстановления файловой системы.
+`e2fsck` - Утилита восстановления для проверки файловой системы, специфичная для расширенных (ext2/3/4) файловых систем.
+`tune2fs` - Изменяет параметры файловой системы в расширенной (ext2/3/4) файловой системе.
+`xfs_repair` - Эквивалент `fsck` для файловых систем XFS.
+`xfs_db` - Эта утилита используется для просмотра различных параметров файловой системы XFS.
+
+
+# Ответы на упражнения для закрепления
+
+
+# Ответы на упражнения для размышления
